--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ auto:        true
 server:      false
 server_port: 4000
 url: http://localhost:4000
-host: arindam2u.com
+host:  "http://arindam2u.com"
 
 source:      .
 destination: ./_site
